[package]
name = "hyperarb"
version = "0.1.0"
edition = "2024"

[dependencies]
alloy = "1.0.36"
anyhow = "1.0.100"
envconfig = "0.11.0"
futures-util = "0.3.31"
hyperqit = "0.1.8"
serde = "1.0.228"
serde_json = "1.0.145"
thiserror = "2.0.16"
tokio = "1.47.1"
tokio-tungstenite =  {version = "0.28.0",features = ["native-tls"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.20"
